# raspiFuturaShopProject

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
include/: PCF8591onFT1060M.hpp  ledControllerForFT1060M.hpp  myPCF8591.hpp
pybind11/: CMakeLists.txt  myPyPCF8591.cpp
src/: CMakeLists.txt  FT1060Mbase.hpp  FT1060Mdata.cpp  FT1060Mdata.hpp  FT1060Mexcept.cpp  FT1060Mexcept.hpp  PCF8591onFT1060M.cpp  PCF8591onFT1060M.hpp  gpio.cxx  i2c++.cxx  i2c.cxx  ledControllerForFT1060M.cpp  myPCF8591.cpp  parameters.hpp
srcTests/: CMakeLists.txt  DBSimNoDB.cxx  gpio_i2c.cxx  i2c++.cxx  i2c.cxx
